build_log_2.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:processDebugGoogleServices UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac FAILED
D:\Documents\GitHub\FoodAid-MAD-Project\app\src\main\java\com\example\foodaid_mad_project\HomeFragments\ItemDetailsFragment.java:107: error: cannot find symbol
        View dialogView = getLayoutInflater().inflate(R.layout.dialog_rating, null); // We will create this layout
                                                              ^
  symbol:   variable dialog_rating
  location: class layout
D:\Documents\GitHub\FoodAid-MAD-Project\app\src\main\java\com\example\foodaid_mad_project\HomeFragments\ItemDetailsFragment.java:180: error: cannot find symbol
            radioGroupCategory.check(R.id.radioButtonHalal); // Example mapping
                                         ^
  symbol:   variable radioButtonHalal
  location: class id
D:\Documents\GitHub\FoodAid-MAD-Project\app\src\main\java\com\example\foodaid_mad_project\HomeFragments\ItemDetailsFragment.java:182: error: cannot find symbol
            radioGroupCategory.check(R.id.radioButtonNonHalal);
                                         ^
  symbol:   variable radioButtonNonHalal
  location: class id
D:\Documents\GitHub\FoodAid-MAD-Project\app\src\main\java\com\example\foodaid_mad_project\HomeFragments\HomeFragment.java:62: error: cannot find symbol
        mapPinContainer = view.findViewById(R.id.MapPinFragment);
                                                ^
  symbol:   variable MapPinFragment
  location: class id
D:\Documents\GitHub\FoodAid-MAD-Project\app\src\main\java\com\example\foodaid_mad_project\HomeFragments\HomeFragment.java:73: error: cannot find symbol
        setupListeners();
        ^
  symbol:   method setupListeners()
  location: class HomeFragment
D:\Documents\GitHub\FoodAid-MAD-Project\app\src\main\java\com\example\foodaid_mad_project\HomeFragments\HomeFragment.java:143: error: cannot find symbol
                    .replace(R.id.MapPinFragment, new MapPinItemFragment(fb))
                                 ^
  symbol:   variable MapPinFragment
  location: class id
D:\Documents\GitHub\FoodAid-MAD-Project\app\src\main\java\com\example\foodaid_mad_project\HomeFragments\MapFragment.java:48: error: cannot find symbol
        mapView = view.findViewById(R.id.mapView);
                                        ^
  symbol:   variable mapView
  location: class id
D:\Documents\GitHub\FoodAid-MAD-Project\app\src\main\java\com\example\foodaid_mad_project\HomeFragments\MapPinItemFragment.java:78: error: cannot find symbol
                    ? getParentFragment().getView().findViewById(R.id.MapPinFragment)
                                                                     ^
  symbol:   variable MapPinFragment
  location: class id
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: D:\Documents\GitHub\FoodAid-MAD-Project\app\src\main\java\com\example\foodaid_mad_project\AuthFragments\User.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
8 errors

[Incubating] Problems report is available at: file:///D:/Documents/GitHub/FoodAid-MAD-Project/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  D:\Documents\GitHub\FoodAid-MAD-Project\app\src\main\java\com\example\foodaid_mad_project\HomeFragments\ItemDetailsFragment.java:107: error: cannot find symbol
          View dialogView = getLayoutInflater().inflate(R.layout.dialog_rating, null); // We will create this layout
                                                                ^
    symbol:   variable dialog_rating
    location: class layout
  D:\Documents\GitHub\FoodAid-MAD-Project\app\src\main\java\com\example\foodaid_mad_project\HomeFragments\ItemDetailsFragment.java:180: error: cannot find symbol
              radioGroupCategory.check(R.id.radioButtonHalal); // Example mapping
                                           ^
    symbol:   variable radioButtonHalal
    location: class id
  D:\Documents\GitHub\FoodAid-MAD-Project\app\src\main\java\com\example\foodaid_mad_project\HomeFragments\ItemDetailsFragment.java:182: error: cannot find symbol
              radioGroupCategory.check(R.id.radioButtonNonHalal);
                                           ^
    symbol:   variable radioButtonNonHalal
    location: class id
  D:\Documents\GitHub\FoodAid-MAD-Project\app\src\main\java\com\example\foodaid_mad_project\HomeFragments\HomeFragment.java:62: error: cannot find symbol
          mapPinContainer = view.findViewById(R.id.MapPinFragment);
                                                  ^
    symbol:   variable MapPinFragment
    location: class id
  D:\Documents\GitHub\FoodAid-MAD-Project\app\src\main\java\com\example\foodaid_mad_project\HomeFragments\HomeFragment.java:73: error: cannot find symbol
          setupListeners();
          ^
    symbol:   method setupListeners()
    location: class HomeFragment
  D:\Documents\GitHub\FoodAid-MAD-Project\app\src\main\java\com\example\foodaid_mad_project\HomeFragments\HomeFragment.java:143: error: cannot find symbol
                      .replace(R.id.MapPinFragment, new MapPinItemFragment(fb))
                                   ^
    symbol:   variable MapPinFragment
    location: class id
  D:\Documents\GitHub\FoodAid-MAD-Project\app\src\main\java\com\example\foodaid_mad_project\HomeFragments\MapFragment.java:48: error: cannot find symbol
          mapView = view.findViewById(R.id.mapView);
                                          ^
    symbol:   variable mapView
    location: class id
  D:\Documents\GitHub\FoodAid-MAD-Project\app\src\main\java\com\example\foodaid_mad_project\HomeFragments\MapPinItemFragment.java:78: error: cannot find symbol
                      ? getParentFragment().getView().findViewById(R.id.MapPinFragment)
                                                                       ^
    symbol:   variable MapPinFragment
    location: class id
  Note: Some input files use or override a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  Note: D:\Documents\GitHub\FoodAid-MAD-Project\app\src\main\java\com\example\foodaid_mad_project\AuthFragments\User.java uses unchecked or unsafe operations.
  Note: Recompile with -Xlint:unchecked for details.
  8 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 2s
18 actionable tasks: 1 executed, 17 up-to-date
